plugins {
    id 'java'
    id 'application'
    id 'distribution'
}

version '1.0-SNAPSHOT'
mainClassName = 'Main'
sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
    jcenter()
    maven { url "https://oss.jfrog.org/artifactory/libs-release"}
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'com.github.twitch4j', name: 'twitch4j', version: '1.0.0-alpha.19'
    compile 'com.google.api-client:google-api-client:1.30.9'
    compile 'com.google.oauth-client:google-oauth-client-jetty:1.30.6'
    compile 'com.google.apis:google-api-services-sheets:v4-rev20200312-1.30.9'
    compile 'com.google.cloud:google-cloud-bigquery:1.111.1'
    compile group: 'commons-codec', name: 'commons-codec', version: '1.14'
    //compile 'com.google.code.gson:gson:+'

    // https://mvnrepository.com/artifact/org.jsoup/jsoup
    compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'


}

sourceSets {
    main {
        java {
            srcDirs= ["src/main/java"]
        }
        resources {
            srcDirs= ["src/main/resources"]
        }
    }
}

jar {
    manifest {
        attributes(
                'Main-Class': 'Main'
        )
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}


compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
tasks.withType(Test) {
    systemProperty "file.encoding", "UTF-8"
}



